code/force-app/main/default/objects/FinServ__IndividualRecordTypeMapper__mdt/fields/FinServ__AccountRecordType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__AccountRecordType__c</fullName>
    <label>Account Record Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>