code/force-app/main/default/objects/FinServ__IndividualRecordTypeMapper__mdt/fields/FinServ__ContactRecordType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ContactRecordType__c</fullName>
    <label>Contact Record Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>