code/force-app/main/default/objects/FinServ__IndividualRecordTypeMapper__mdt/fields/FinServ__ContactRecordTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ContactRecordTypeNamespace__c</fullName>
    <label>Record Type Namespace (Contact)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>