code/force-app/main/default/objects/FinServ__IndividualRecordTypeMapper__mdt/fields/FinServ__DetailPage__c.field-meta.xml
<CustomField>
    <fullName>FinServ__DetailPage__c</fullName>
    <label>Detail Page</label>
    <length>200</length>
    <type>Text</type>
</CustomField>