code/force-app/main/default/objects/FinServ__IndividualRecordTypeMapper__mdt/fields/FinServ__LeadRecordType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__LeadRecordType__c</fullName>
    <description>Record type on Lead object</description>
    <label>Lead Record Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>